# py-sfomuseum-api

./: .gitignore  README.md  pyproject.toml  setup.py
scripts/: sfomuseum-api
sfomuseum/api/: __init__.py  client.py
sfomuseum/api/client/: __init__.py
sfomuseum/api/request/: __init__.py
tests/: client.py  test_client.py
